--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@
     top: 100%;
   }
   
+  .model-container{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    z-index: -99; 
+    width: 150%; 
+    margin-top: 10%;
+  }
+
   * {
     box-sizing: border-box;
   }
@@ -425,13 +434,14 @@
     max-width: 460px;
   }
   body .portfolio_home__title .logo {
+    display: flex;
     margin-bottom: 30px;
   }
   body .portfolio_home__title .logo img.first {
     margin-right: 0px;
     position: relative;
     top: 3px;
-    width: 135px;
+    width: 280px;
     opacity: 0;
     -webkit-animation: fade 1s 1s forwards;
     animation: fade 1s 1s forwards;
@@ -442,7 +452,7 @@
     opacity: 1;
   }
   body .portfolio_home__title .logo img.second {
-    width: 140px;
+    width: 280px;
     -webkit-animation: spark 1.3s 1.1s cubic-bezier(0.76, 0.01, 0.21, 1.02) forwards;
             animation: spark 1.3s 1.1s cubic-bezier(0.76, 0.01, 0.21, 1.02) forwards;
     -webkit-clip-path: polygon(0 0, 0% 0%, 0% 100%, 0% 100%);
@@ -478,8 +488,6 @@
     color: white;
     margin-top: 60px;
     line-height: 30px;
-    font-weight: normal;
-    font-size: 18px;
     opacity: 0;
     margin-bottom: 30px;
     -webkit-animation: fade 1s 1.9s forwards;
