--- a/style.css
+++ b/style.css
@@ -429,9 +429,10 @@
   }
   body .portfolio_home__title {
     position: absolute;
-    bottom: 80px;
+    bottom: 30%;
     left: 80px;
     max-width: 460px;
+    position: fixed;
   }
   body .portfolio_home__title .logo {
     display: flex;
@@ -441,7 +442,7 @@
     margin-right: 0px;
     position: relative;
     top: 3px;
-    width: 280px;
+    width: 350px;
     opacity: 0;
     -webkit-animation: fade 1s 1s forwards;
     animation: fade 1s 1s forwards;
@@ -452,7 +453,7 @@
     opacity: 1;
   }
   body .portfolio_home__title .logo img.second {
-    width: 280px;
+    width: 140px;
     -webkit-animation: spark 1.3s 1.1s cubic-bezier(0.76, 0.01, 0.21, 1.02) forwards;
             animation: spark 1.3s 1.1s cubic-bezier(0.76, 0.01, 0.21, 1.02) forwards;
     -webkit-clip-path: polygon(0 0, 0% 0%, 0% 100%, 0% 100%);
@@ -460,11 +461,11 @@
   }
   body .portfolio_home__title hr {
     width: 80px;
-    background: #ffdc25;
+    background: #F06833;
     height: 2px;
     border: none;
     position: absolute;
-    left: 0;
+    left: 11px;
     width: 0;
     top: 77px;
     -webkit-animation: hr 1.3s 1.4s cubic-bezier(0.76, 0.01, 0.21, 1.02) forwards;
@@ -488,6 +489,7 @@
     color: white;
     margin-top: 60px;
     line-height: 30px;
+    font-size: 25px;
     opacity: 0;
     margin-bottom: 30px;
     -webkit-animation: fade 1s 1.9s forwards;
@@ -499,7 +501,8 @@
     opacity: 1;
   }
   body .portfolio_home__title h1 span {
-    color: #ffdc25;
+    color:#F06833;
+    
   }
   body .portfolio_home__title .page_portfolio {
     background: #ffdc25;
