--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -4204,7 +4204,7 @@ input, select, textarea {
 
 	.generic-container p{
 		margin: 0;
-		font-size: 25px;
+		font-size: 20px;
 		text-align: center;
 		margin-left: 5rem;
 	}
@@ -4214,29 +4214,98 @@ input, select, textarea {
 		margin: auto;
 	}
 
-	.patent-box {
-        display: flex;
-        justify-content: space-around;
-        background-color:#dac1dd;
-    }
+	#blur.active{
+		filter: blur(20px);
+	}
+	/* #blur2.active{
+		filter: blur(20px);
+	}
+	#blur3.active{
+		filter: blur(20px);
+	}
+	#blur4.active{
+		filter: blur(20px);
+	}
+	#blur5.active{
+		filter: blur(20px);
+	} */
 
+	#popup{
+		position: fixed;
+		top: 40%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+		width: 50%;
+		/* height: 100%; */
+		padding: 50px;
+		/* background: #fff; */
+		visibility: hidden;
+		background-color: black;
+		/* opacity: 0; */
+		/* transition: 1s; */
+	}
 
-    .patent-box .box1 {
-        margin-top: 5%;
-        color: #000;
-        font-size: larger;
-        font-size: 1.3rem;
+	#popup.active{
+		top: 48%;
+		visibility: visible;
+		display: block;
+		/* opacity: 1; */
+		/* transition: 0.2s; */
+	}
 
-    }
+	#popup2{
+		position: fixed;
+		top: 40%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+		width: 50%;
+		/* height: 100%; */
+		padding: 50px;
+		/* background: #fff; */
+		visibility: hidden;
+		background-color: black;
+		/* opacity: 0; */
+		/* transition: 1s; */
+	}
 
-    .patent-box .box2 {
-        margin-top: -2%;
-        margin-left: -1%;
-    }
+	#popup2.active{
+		top: 48%;
+		visibility: visible;
+		display: block;
+		/* opacity: 1; */
+		/* transition: 0.2s; */
+	}
+	#popup3{
+		position: fixed;
+		top: 40%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+		width: 50%;
+		/* height: 100%; */
+		padding: 50px;
+		/* background: #fff; */
+		visibility: hidden;
+		background-color: black;
+		/* opacity: 0; */
+		/* transition: 1s; */
+	}
 
-	.wrapperpatent {
-        margin: auto;
-        margin-top: 10%;
-        width: 70%;
-        
-    }
+	#popup3.active{
+		top: 48%;
+		visibility: visible;
+		display: block;
+		/* opacity: 1; */
+		/* transition: 0.2s; */
+	}
+
+	.close1{
+		text-decoration: none;
+		border-bottom: none;
+		border: 3px solid white;
+		padding: 5px 30px;
+		width: fit-content;
+		margin-top: 3%;
+		margin-bottom: -2%;
+		font-size: 22px;
+		cursor: pointer;
+	}
