--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -4056,9 +4056,9 @@ input, select, textarea {
 	  .viscom-video{
 		  /* margin-bottom: -15%; */
 		  z-index: 2;
-		  max-width: 50%;
+		  max-width: 70%;
 		  margin: auto;
-		  margin-right: 3%;
+		  
 	  }
 
 	  .top-container{
@@ -4140,7 +4140,7 @@ input, select, textarea {
 	  .benefits-container{
 		display: grid;
 		grid-gap: 1rem;
-		grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
 		margin: 1%;
 	  }
 
@@ -4158,6 +4158,9 @@ input, select, textarea {
 		  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 		  box-shadow: rgb(17 17 26 / 62%) 18px 18px 15px 4px, rgb(17 17 26 / 10%) 0px 8px 24px, rgb(17 17 26 / 10%) 0px 16px 56px;
     	  margin-bottom: 3%;
+		  background: #355686;
+		  background-color: #3e686a;
+		  background-color: rgb(136 108 137);
 }
 
 	.box1:hover{
@@ -4171,6 +4174,7 @@ input, select, textarea {
 		max-width: 50%;
 		margin: inherit;
 		margin-top: 3%;
+		height: 160px;
 	  }
 
 	  .box1 h3{
@@ -4216,6 +4220,13 @@ input, select, textarea {
 
 	#blur.active{
 		filter: blur(20px);
+	}
+	#blur4.active{
+		filter: blur(20px);
+	}
+	#blur5.active{
+		filter: blur(20px);
+		scroll-behavior: unset;
 	}
 	/* #blur2.active{
 		filter: blur(20px);
@@ -4298,6 +4309,8 @@ input, select, textarea {
 		/* transition: 0.2s; */
 	}
 
+	
+
 	.close1{
 		text-decoration: none;
 		border-bottom: none;
@@ -4309,3 +4322,70 @@ input, select, textarea {
 		font-size: 22px;
 		cursor: pointer;
 	}
+	.close2{
+		text-decoration: none;
+		border-bottom: none;
+		border: 3px solid white;
+		padding: 5px 30px;
+		width: fit-content;
+		margin-top: 3%;
+		margin-bottom: -2%;
+		font-size: 22px;
+		cursor: pointer;
+	}
+.video-container{
+	display: none;
+}
+
+.patent-box{
+	display: flex;
+	background-color: pink;
+}
+
+.patent-box1{
+		  margin: auto;
+		  border-radius: 10px;
+		  line-height: 2;
+		  padding: 1%;
+		  color: black;
+		  font-size: larger;
+		  font-weight: bold;
+		  border: 4px solid #ffba69;
+		  border: 2px solid #6864644a;
+		  box-shadow: rgb(17 17 26 / 62%) 18px 18px 15px 4px, rgb(17 17 26 / 10%) 0px 8px 24px, rgb(17 17 26 / 10%) 0px 16px 56px;
+    	  
+}
+
+.patent-box1 ul{
+	margin: 1.2rem;
+}
+
+.top-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.main-heading{
+	margin-top: 15%;
+}
+
+div#popup4{
+	position: fixed;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 50%;
+	padding: 50px;
+	visibility: hidden;
+	background-color: pink;
+
+}
+
+#popup4.active{
+	top: 48%;
+	visibility: visible;
+	display: block;
+	/* opacity: 1; */
+	/* transition: 0.2s; */
+}
