--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -4325,13 +4325,19 @@ input, select, textarea {
 	.close2{
 		text-decoration: none;
 		border-bottom: none;
-		border: 3px solid white;
+		border: 3px solid black;
 		padding: 5px 30px;
 		width: fit-content;
 		margin-top: 3%;
 		margin-bottom: -2%;
 		font-size: 22px;
 		cursor: pointer;
+		color: black;
+		font-weight: 600;
+	}
+	.patent-box-main-container a:hover{
+		border: 3px solid black;
+		color: #c52c2c !important;
 	}
 .video-container{
 	display: none;
@@ -4350,9 +4356,9 @@ input, select, textarea {
 		  color: black;
 		  font-size: larger;
 		  font-weight: bold;
-		  border: 4px solid #ffba69;
+		  /* border: 4px solid #ffba69;
 		  border: 2px solid #6864644a;
-		  box-shadow: rgb(17 17 26 / 62%) 18px 18px 15px 4px, rgb(17 17 26 / 10%) 0px 8px 24px, rgb(17 17 26 / 10%) 0px 16px 56px;
+		  box-shadow: rgb(17 17 26 / 62%) 18px 18px 15px 4px, rgb(17 17 26 / 10%) 0px 8px 24px, rgb(17 17 26 / 10%) 0px 16px 56px; */
     	  
 }
 
@@ -4385,7 +4391,6 @@ div#popup4{
 #popup4.active{
 	top: 48%;
 	visibility: visible;
-	display: block;
-	/* opacity: 1; */
-	/* transition: 0.2s; */
+	/* display: block; */
+
 }
