--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -4404,3 +4404,23 @@ div#popup4{
 
 }
 
+#popup5{
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	padding: 50px;
+	visibility: hidden;
+	background-color: #00000038;
+}
+
+#popup5.active{
+	top: 50%;
+	visibility: visible;
+	display: block;
+}
+
+.close2:hover{
+	color: white !important;
+	border: 3px solid black !important;
+}
