--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -4344,6 +4344,25 @@ input, select, textarea {
 		color: black;
 		font-weight: 600;
 	}
+
+	.close3{
+		text-decoration: none;
+		border-bottom: none;
+		border: 3px solid black;
+		padding: 5px 30px;
+		width: fit-content;
+		margin-top: 3%;
+		margin-bottom: -2%;
+		font-size: 22px;
+		cursor: pointer;
+		color: black;
+		font-weight: 600;
+	}
+
+	.close3:hover{
+		border: 3px solid black;
+	}
+
 	.patent-box-main-container a:hover{
 		border: 3px solid black;
 		color: #c52c2c !important;
@@ -4446,4 +4465,27 @@ div#popup4{
 .close2:hover{
 	color: white !important;
 	border: 3px solid black !important;
+}
+
+#popup6{
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 50%;
+	/* height: 100%; */
+	padding: 50px;
+	/* background: #fff; */
+	visibility: hidden;
+	background-color: #00000038;
+	/* opacity: 0; */
+	/* transition: 1s; */
+}
+
+#popup6.active{
+	top: 48%;
+	visibility: visible;
+	display: block;
+	/* opacity: 1; */
+	/* transition: 0.2s; */
 }
