--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -3641,7 +3641,8 @@ input, select, textarea {
 			#contact > .inner > :nth-child(2n - 1) {
 				padding: 4em 3em 2em 0 ;
 				border-right: solid 1px rgba(212, 212, 255, 0.1);
-				width: 60%;
+				/* width: 60%; */
+				width: 100%;
 			}
 
 			#contact > .inner > :nth-child(2n) {
@@ -4488,4 +4489,8 @@ div#popup4{
 	display: block;
 	/* opacity: 1; */
 	/* transition: 0.2s; */
+}
+
+.split{
+	display: flex;
 }
