--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
-/*
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -99,7 +94,8 @@ input, select, textarea {
 	}
 
 	body {
-		background: #242943;
+		/* background: #242943; */
+		background: #07101d;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -3381,7 +3377,7 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		background-image: url("../../images/banner.jpg");
+		/* background-image: url("../../images/banner.jpg"); */
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -3396,7 +3392,7 @@ input, select, textarea {
 		height: 60vh;
 		margin-bottom: -3.25em;
 		max-height: 32em;
-		min-height: 22em;
+		/* min-height: 22em; */
 		position: relative;
 		top: -3.25em;
 	}
@@ -3411,7 +3407,7 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			pointer-events: none;
-			background-color: #242943;
+			background: #07101d;
 			content: '';
 			display: block;
 			height: 100%;
@@ -4238,19 +4234,7 @@ input, select, textarea {
 		filter: blur(20px);
 		scroll-behavior: unset;
 	}
-	/* #blur2.active{
-		filter: blur(20px);
-	}
-	#blur3.active{
-		filter: blur(20px);
-	}
-	#blur4.active{
-		filter: blur(20px);
-	}
-	#blur5.active{
-		filter: blur(20px);
-	} */
-
+	
 	#popup{
 		position: fixed;
 		top: 40%;
@@ -4494,3 +4478,4 @@ div#popup4{
 .split{
 	display: flex;
 }
+
