--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -2831,6 +2831,8 @@ input, select, textarea {
 
 			.tiles article:nth-child(6n - 5):before {
 				background-color: #6fc3df;
+				margin-left: -1%;
+    			margin-bottom: 1%;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
