--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -2798,7 +2798,7 @@ input, select, textarea {
 			}
 
 			.tiles article:after {
-				background-color: rgba(36, 41, 67, 0.25);
+				/* background-color: rgba(36, 41, 67, 0.25); */
 				content: '';
 				display: block;
 				height: 100%;
@@ -2810,7 +2810,8 @@ input, select, textarea {
 			}
 
 			.tiles article:hover:before {
-				opacity: 0;
+				/* opacity: 0; */
+				cursor: pointer;
 			}
 
 			.tiles article.is-transitioning {
@@ -2831,24 +2832,32 @@ input, select, textarea {
 
 			.tiles article:nth-child(6n - 5):before {
 				background-color: #6fc3df;
-				margin-left: -1%;
-    			margin-bottom: 1%;
+				margin-left: 0.5%;
+    			margin-bottom: 3%;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
 				background-color: #8d82c4;
+				margin-left: 4%;
+    			margin-bottom: 2%;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
 				background-color: #ec8d81;
+				margin-left: 0.5%;
+    			margin-bottom: 3%;
 			}
 
 			.tiles article:nth-child(6n - 2):before {
 				background-color: #e7b788;
+				margin-left: 6%;
+    			margin-bottom: 4.5%;
 			}
 
 			.tiles article:nth-child(6n - 1):before {
 				background-color: #8ea9e8;
+				margin-left: 3%;
+    			margin-bottom: 3%;
 			}
 
 			.tiles article:nth-child(6n):before {
