--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -2721,7 +2721,7 @@ input, select, textarea {
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
 		border-top: 0 !important;
-		padding: 1%;
+		padding: 3% 3% 0 3%;
 	}
 
 		.tiles + * {
@@ -2845,13 +2845,13 @@ input, select, textarea {
 			.tiles article:nth-child(6n - 3):before {
 				background-color: #ec8d81;
 				margin-left: 0.5%;
-    			margin-bottom: 3%;
+    			margin-bottom: -4%;
 			}
 
 			.tiles article:nth-child(6n - 2):before {
 				background-color: #e7b788;
 				margin-left: 6%;
-    			margin-bottom: 4.5%;
+    			margin-bottom: -6.5%;
 			}
 
 			.tiles article:nth-child(6n - 1):before {
