--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -2832,24 +2832,28 @@ input, select, textarea {
 
 			.tiles article:nth-child(6n - 5):before {
 				background-color: #6fc3df;
+				background-color: #0c6380;
 				margin-left: 0.5%;
     			margin-bottom: 3%;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
 				background-color: #8d82c4;
+				background-color: #5949a9;
 				margin-left: 4%;
     			margin-bottom: 2%;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
 				background-color: #ec8d81;
+				background-color: #E00000;
 				margin-left: 0.5%;
     			margin-bottom: -4%;
 			}
 
 			.tiles article:nth-child(6n - 2):before {
 				background-color: #e7b788;
+				background-color: #ff3702;
 				margin-left: 6%;
     			margin-bottom: -6.5%;
 			}
@@ -4202,7 +4206,7 @@ input, select, textarea {
 	} */
 
 	span{
-		color:#ffb56b;
+		color:#000;
 	}
 
 	.generic-maincontainer{
