patent-box2 changes

--- a/html5up-forty/assets/css/main.css
+++ b/html5up-forty/assets/css/main.css
@@ -5059,4 +5059,13 @@ div a.main-btn{
 		.patent-box{
 			flex-direction: column;
 		}
+
+		.patent-box2{
+			display: flex;
+			justify-content: center;
+		}
 	}
+
+	/* popup6 */
+
+	
